--- a/css/sass/DarkAzure.scss
+++ b/css/sass/DarkAzure.scss
@@ -19,6 +19,7 @@ body {
   color: $PipText;
   a{color:$PipText;}
   width: 100%;
+  margin-bottom: 0;
   text-align: center;
   border-top: none;
   border-left: none;
@@ -26,7 +27,6 @@ body {
   border-bottom: 1px solid #17b2ff;
   border-radius: 0px;
   .navbar-nav{
-    margin: auto;
     width: 100%;
     text-align: center;
     li{
@@ -35,14 +35,20 @@ body {
       float: none;
       display: inline-block;
       a{
-        width: 150%;
         transition: all, .5s;
         color: $PipText;
         transform-origin: center;
-        &:hover {
+        z-index: 1;
+        &:after{
+          background: linear-gradient($FGCol,transparentize($PipText,0.3));
+          transition: opacity 1s ease-out;
+          opacity: 0;
+          z-index: 2;
+        }
+        &:hover, &:after {
           color: $PipSel;
           transition: all, 1s;
-          background: linear-gradient($FGCol,transparentize($PipText,0.3));
+          opacity: 1;
         }
       }
     }
@@ -50,13 +56,64 @@ body {
   }
 }
 
+.jumbotron, .page-header{
+  background: $FGCol;
+  height: 25%;
+  padding-top: 10px;
+  margin-bottom: 20px;
+}
+
+.PageHead{
+  .h2, h2{
+    margin-top: 5px;
+  }
+}
+
+#ResumePage{
+  .h4, h4{
+    color: lighten($PipText, 50);
+    padding: 5px 0;
+    text-align:center;
+    background: linear-gradient(to right,$BGCol, $BGCol, transparentize($PipText,.5),$BGCol, $BGCol);
+  }
+  .h5, h5{
+    font-size: 16px;
+    color: lighten($PipText, 50);
+    padding: 5px 0;
+    text-align:center;
+    background: linear-gradient(to right,$BGCol, $BGCol, transparentize($PipText,.5),$BGCol, $BGCol);
+  }
+  ul{
+    margin-right: 0;
+    padding-left: 0;
+  }
+  li{
+    list-style-type: none;
+    text-align: center;
+    padding: 1px;
+    line-height: 1.5;
+    margin-bottom: 5px;
+    color: black;
+    background: transparentize($PipText, .5);
+    transition: all, .8s;
+    &:hover, &:active{
+      background: transparentize($PipText, .25);
+    }
+  }
+/*  .RightSide{
+    li{
+      text-align: center;
+    }
+  }*/
+}
 
 form{
   border: 1px solid $PipText;
   left: 50%;
   border-radius: 5px;
   background: $FGCol;
-  width: 50%;
+  width: 100%;
+  display: inline-block;
   text-align: center;
   input{
     text-align: center;
@@ -73,7 +130,9 @@ form{
     color: $PipText;
     border: 2px solid $BGCol;
     border-radius: 5px;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
   }
   #Subject input{
     width: 95%;
@@ -82,11 +141,17 @@ form{
 
 .well-no{
   background: #ff3030;
+  text-align: center;
   color: white;
   border: 1px solid red;
 }
 .well-yes{
   background: #80ff80;
+  text-align: center;
   color: white;
   border: 1px solid green;
+}
+
+@media (min-width: 1200px) {
+  .container{ max-width: 970px;}
 }
