--- a/css/sass/DarkAzure.scss
+++ b/css/sass/DarkAzure.scss
@@ -7,26 +7,31 @@ $FGCol: #242424;
 $BarBG: #0A0;
 $BarFil: #0F0;
 $transparent: rgba(0, 0, 0, 0);
+
 body {
     background: $BGCol;
-    color: #17b2ff;
+    color: white;
+    font-size: 20px;
     font-family: Helvetica;
 }
 
 .MainMenu {
     background: $FGCol;
     color: $PipText;
+
     a {
         color: $PipText;
     }
+
     width: 100%;
     margin-bottom: 0;
     text-align: center;
     border-top: none;
     border-left: none;
     border-right: none;
-    border-bottom: 1px solid #17b2ff;
+    border-bottom: 5px solid #17b2ff;
     border-radius: 0px;
+
     .navbar-header {
         a {
             transition: all, .5s;
@@ -34,12 +39,14 @@ body {
             font-weight: bold;
             transform-origin: center;
             z-index: 1;
+
             &:after {
                 background: linear-gradient($FGCol, transparentize($PipText, 0.3));
                 transition: opacity 1s ease-out;
                 opacity: 0;
                 z-index: 2;
             }
+
             &:hover,
             &:after {
                 color: $PipSel;
@@ -48,21 +55,26 @@ body {
             }
         }
     }
+
     .navbar-nav {
         text-align: center;
+
         li {
             text-align: center;
+
             a {
                 transition: all, .5s;
                 color: $PipText;
                 transform-origin: center;
                 z-index: 1;
+
                 &:after {
                     background: linear-gradient($FGCol, transparentize($PipText, 0.3));
                     transition: opacity 1s ease-out;
                     opacity: 0;
                     z-index: 2;
                 }
+
                 &:hover,
                 &:after {
                     color: $PipSel;
@@ -71,6 +83,7 @@ body {
                 }
             }
         }
+
         a {
             color: $PipText;
         }
@@ -86,10 +99,12 @@ body {
 }
 
 .PageHead {
+
     .h2,
     h2 {
         margin-top: 5px;
     }
+
     .jumbotron {
         margin-bottom: 0;
     }
@@ -97,6 +112,7 @@ body {
 
 #ResumePage {
     color: $PipSel;
+
     .h4,
     h4 {
         color: lighten($PipText, 50);
@@ -104,28 +120,34 @@ body {
         text-align: center;
         background: linear-gradient(to right, $BGCol, $BGCol, transparentize($PipText, .5), $BGCol, $BGCol);
     }
+
     .h5,
     h5 {
-        font-size: 16px;
+        //font-size: 16px;
         color: $PipSel;
         padding: 5px 0;
         text-align: center;
         background: linear-gradient(to right, $BGCol, $BGCol, transparentize($PipText, .5), $BGCol, $BGCol);
     }
+
     tr {
         border-bottom-width: 5px;
         border-bottom-color: linear-gradient(to right, $BGCol, $BGCol, transparentize($PipText, .2), $BGCol, $BGCol);
     }
+
     td {
         border-top: none;
     }
+
     .col-sm-4 {
         margin-bottom: 20px;
     }
+
     ul {
         margin-right: 0;
         padding-left: 0;
     }
+
     li {
         list-style-type: none;
         text-align: center;
@@ -134,6 +156,7 @@ body {
         margin-bottom: 5px;
         color: $PipSel;
         transition: all, .8s;
+
         &:hover,
         &:active {
             background: transparentize($PipText, .9);
@@ -146,6 +169,7 @@ body {
         color: $PipText;
         line-height: 12px;
     }
+
     h2 {
         margin-bottom: 0;
         line-height: 0px;
@@ -157,17 +181,21 @@ body {
         width: 315px;
         height: 250px;
     }
+
     .card {
         background: $FGCol;
     }
+
     td {
         border-top: none;
     }
+
     .card-body {
         .img {
             width: 100%;
             height: 100%;
         }
+
         border:2px $PipText;
         border-radius: 8px;
     }
@@ -203,6 +231,7 @@ form {
     width: 100%;
     display: inline-block;
     text-align: center;
+
     input {
         text-align: center;
         width: 49%;
@@ -211,6 +240,7 @@ form {
         border: 2px solid $BGCol;
         border-radius: 5px;
     }
+
     textarea {
         background: $BGCol;
         height: 45%;
@@ -222,6 +252,7 @@ form {
         justify-content: center;
         display: flex;
     }
+
     #Subject input {
         width: 100%;
     }
@@ -242,25 +273,30 @@ form {
 }
 
 .GamePage {
+
     .h5,
     h5,
     .h4,
     h4 {
         font-weight: bold;
     }
+
     a {
         color: $PipText;
+
         &:hover,
         &:active {
             color: $PipSel;
         }
     }
+
     .table {
         tbody {
             tr {
                 td {
                     border-top: none;
                 }
+
                 border-bottom-width: 1px;
                 border-bottom: linear-gradient(to right, $BGCol, $BGCol, transparentize($PipText, .2), $BGCol, $BGCol);
             }
@@ -276,6 +312,7 @@ form {
 
 .carousel-inner {
     border-radius: 10px;
+
     img {
         width: 100%;
         height: 100%;
