--- a/css/sass/DarkAzure.css
+++ b/css/sass/DarkAzure.css
@@ -1,6 +1,7 @@
 body {
   background: #484848;
-  color: #17b2ff;
+  color: white;
+  font-size: 16px;
   font-family: Helvetica;
 }
 
@@ -13,7 +14,7 @@ body {
   border-top: none;
   border-left: none;
   border-right: none;
-  border-bottom: 1px solid #17b2ff;
+  border-bottom: 5px solid #17b2ff;
   border-radius: 0px;
 }
 
@@ -22,15 +23,20 @@ body {
 }
 
 .MainMenu .navbar-header a {
+  -webkit-transition: all, .5s;
   transition: all, .5s;
   color: #17b2ff;
   font-weight: bold;
-  transform-origin: center;
+  font-size: 20px;
+  -webkit-transform-origin: center;
+          transform-origin: center;
   z-index: 1;
 }
 
 .MainMenu .navbar-header a:after {
+  background: -webkit-gradient(linear, left top, left bottom, from(#242424), to(rgba(23, 178, 255, 0.7)));
   background: linear-gradient(#242424, rgba(23, 178, 255, 0.7));
+  -webkit-transition: opacity 1s ease-out;
   transition: opacity 1s ease-out;
   opacity: 0;
   z-index: 2;
@@ -38,6 +44,7 @@ body {
 
 .MainMenu .navbar-header a:hover, .MainMenu .navbar-header a:after {
   color: #e6f7ff;
+  -webkit-transition: all, 1s;
   transition: all, 1s;
   opacity: 1;
 }
@@ -51,14 +58,18 @@ body {
 }
 
 .MainMenu .navbar-nav li a {
+  -webkit-transition: all, .5s;
   transition: all, .5s;
   color: #17b2ff;
-  transform-origin: center;
+  -webkit-transform-origin: center;
+          transform-origin: center;
   z-index: 1;
 }
 
 .MainMenu .navbar-nav li a:after {
+  background: -webkit-gradient(linear, left top, left bottom, from(#242424), to(rgba(23, 178, 255, 0.7)));
   background: linear-gradient(#242424, rgba(23, 178, 255, 0.7));
+  -webkit-transition: opacity 1s ease-out;
   transition: opacity 1s ease-out;
   opacity: 0;
   z-index: 2;
@@ -66,6 +77,7 @@ body {
 
 .MainMenu .navbar-nav li a:hover, .MainMenu .navbar-nav li a:after {
   color: #e6f7ff;
+  -webkit-transition: all, 1s;
   transition: all, 1s;
   opacity: 1;
 }
@@ -100,15 +112,16 @@ body {
   color: white;
   padding: 5px 0;
   text-align: center;
+  background: -webkit-gradient(linear, left top, right top, from(#484848), color-stop(#484848), color-stop(rgba(23, 178, 255, 0.5)), color-stop(#484848), to(#484848));
   background: linear-gradient(to right, #484848, #484848, rgba(23, 178, 255, 0.5), #484848, #484848);
 }
 
 #ResumePage .h5,
 #ResumePage h5 {
-  font-size: 16px;
   color: #e6f7ff;
   padding: 5px 0;
   text-align: center;
+  background: -webkit-gradient(linear, left top, right top, from(#484848), color-stop(#484848), color-stop(rgba(23, 178, 255, 0.5)), color-stop(#484848), to(#484848));
   background: linear-gradient(to right, #484848, #484848, rgba(23, 178, 255, 0.5), #484848, #484848);
 }
 
@@ -137,6 +150,7 @@ body {
   line-height: 1.5;
   margin-bottom: 5px;
   color: #e6f7ff;
+  -webkit-transition: all, .8s;
   transition: all, .8s;
 }
 
@@ -223,8 +237,14 @@ form textarea {
   color: #17b2ff;
   border: 2px solid #484848;
   border-radius: 5px;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -282,3 +302,4 @@ form #Subject input {
   width: 100%;
   height: 100%;
 }
+/*# sourceMappingURL=DarkAzure.css.map */
