--- a/css/sass/DarkAzure.css
+++ b/css/sass/DarkAzure.css
@@ -5,6 +5,14 @@ body {
   font-family: Helvetica;
 }
 
+.table {
+  text-align: justify;
+}
+
+.table td {
+  padding: 5px;
+}
+
 .MainMenu {
   background: #242424;
   color: #17b2ff;
@@ -23,20 +31,16 @@ body {
 }
 
 .MainMenu .navbar-header a {
-  -webkit-transition: all, .5s;
   transition: all, .5s;
   color: #17b2ff;
   font-weight: bold;
   font-size: 20px;
-  -webkit-transform-origin: center;
-          transform-origin: center;
+  transform-origin: center;
   z-index: 1;
 }
 
 .MainMenu .navbar-header a:after {
-  background: -webkit-gradient(linear, left top, left bottom, from(#242424), to(rgba(23, 178, 255, 0.7)));
   background: linear-gradient(#242424, rgba(23, 178, 255, 0.7));
-  -webkit-transition: opacity 1s ease-out;
   transition: opacity 1s ease-out;
   opacity: 0;
   z-index: 2;
@@ -44,7 +48,6 @@ body {
 
 .MainMenu .navbar-header a:hover, .MainMenu .navbar-header a:after {
   color: #e6f7ff;
-  -webkit-transition: all, 1s;
   transition: all, 1s;
   opacity: 1;
 }
@@ -58,18 +61,14 @@ body {
 }
 
 .MainMenu .navbar-nav li a {
-  -webkit-transition: all, .5s;
   transition: all, .5s;
   color: #17b2ff;
-  -webkit-transform-origin: center;
-          transform-origin: center;
+  transform-origin: center;
   z-index: 1;
 }
 
 .MainMenu .navbar-nav li a:after {
-  background: -webkit-gradient(linear, left top, left bottom, from(#242424), to(rgba(23, 178, 255, 0.7)));
   background: linear-gradient(#242424, rgba(23, 178, 255, 0.7));
-  -webkit-transition: opacity 1s ease-out;
   transition: opacity 1s ease-out;
   opacity: 0;
   z-index: 2;
@@ -77,7 +76,6 @@ body {
 
 .MainMenu .navbar-nav li a:hover, .MainMenu .navbar-nav li a:after {
   color: #e6f7ff;
-  -webkit-transition: all, 1s;
   transition: all, 1s;
   opacity: 1;
 }
@@ -112,7 +110,6 @@ body {
   color: white;
   padding: 5px 0;
   text-align: center;
-  background: -webkit-gradient(linear, left top, right top, from(#484848), color-stop(#484848), color-stop(rgba(23, 178, 255, 0.5)), color-stop(#484848), to(#484848));
   background: linear-gradient(to right, #484848, #484848, rgba(23, 178, 255, 0.5), #484848, #484848);
 }
 
@@ -121,7 +118,6 @@ body {
   color: #e6f7ff;
   padding: 5px 0;
   text-align: center;
-  background: -webkit-gradient(linear, left top, right top, from(#484848), color-stop(#484848), color-stop(rgba(23, 178, 255, 0.5)), color-stop(#484848), to(#484848));
   background: linear-gradient(to right, #484848, #484848, rgba(23, 178, 255, 0.5), #484848, #484848);
 }
 
@@ -150,7 +146,6 @@ body {
   line-height: 1.5;
   margin-bottom: 5px;
   color: #e6f7ff;
-  -webkit-transition: all, .8s;
   transition: all, .8s;
 }
 
@@ -168,27 +163,27 @@ body {
   line-height: 0px;
 }
 
+.card {
+  background: #242424;
+}
+
+.card-body {
+  border: 2px #17b2ff;
+  border-radius: 8px;
+}
+
+.card-body .img {
+  width: 100%;
+  height: 100%;
+}
+
 #ProjectsPage img {
   width: 315px;
   height: 250px;
 }
 
-#ProjectsPage .card {
-  background: #242424;
-}
-
 #ProjectsPage td {
   border-top: none;
-}
-
-#ProjectsPage .card-body {
-  border: 2px #17b2ff;
-  border-radius: 8px;
-}
-
-#ProjectsPage .card-body .img {
-  width: 100%;
-  height: 100%;
 }
 
 #Port3D img {
@@ -237,14 +232,8 @@ form textarea {
   color: #17b2ff;
   border: 2px solid #484848;
   border-radius: 5px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  align-items: center;
+  justify-content: center;
   display: flex;
 }
 
@@ -302,4 +291,3 @@ form #Subject input {
   width: 100%;
   height: 100%;
 }
-/*# sourceMappingURL=DarkAzure.css.map */
