--- a/css/sass/DarkAzure.scss
+++ b/css/sass/DarkAzure.scss
@@ -14,7 +14,12 @@ body {
     font-size: 16px;
     font-family: Helvetica;
 }
-
+.table{
+    td{
+        padding: 5px;
+    }
+    text-align: justify;
+}
 .MainMenu {
     background: $FGCol;
     color: $PipText;
@@ -177,29 +182,29 @@ body {
     }
 }
 
+.card {
+    background: $FGCol;
+}
+.card-body {
+    .img {
+        width: 100%;
+        height: 100%;
+    }
+
+    border:2px $PipText;
+    border-radius: 8px;
+
+}
 #ProjectsPage {
     img {
         width: 315px;
         height: 250px;
     }
 
-    .card {
-        background: $FGCol;
-    }
-
     td {
         border-top: none;
     }
 
-    .card-body {
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-
-        border:2px $PipText;
-        border-radius: 8px;
-    }
 }
 
 #Port3D {
