Added projects and levels

--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -12,13 +12,13 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #17b2ff
-$secondary : #484848
-$accent    : #17b2ff
+$primary: #17b2ff
+$secondary: #484848
+$accent: #17b2ff
 
-$dark      : #242424
-
-$positive  : #21BA45
-$negative  : #C10015
-$info      : #31CCEC
-$warning   : #F2C037
+$dark: #242424
+$black: #121212
+$positive: #21BA45
+$negative: #C10015
+$info: #31CCEC
+$warning: #F2C037
