--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,1 +1,21 @@
 // app global css in Sass form
+@import "BootstrapSnippets.sass"
+.gallery
+  -webkit-column-count: 3
+  -moz-column-count: 3
+  column-count: 3
+  -webkit-column-width: 33%
+  -moz-column-width: 33%
+  column-width: 33%
+  img
+    padding: 5px
+.pics
+  -webkit-transition: all 350ms ease
+  transition: all 350ms ease
+.animation
+  -webkit-transform: scale(1)
+  -ms-transform: scale(1)
+  transform: scale(1)
+
+.q-carousel
+  background: $black
