--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,12 +1,27 @@
 // app global css in Sass form
 @import "BootstrapSnippets.sass"
 .gallery
-  -webkit-column-count: 3
-  -moz-column-count: 3
-  column-count: 3
-  -webkit-column-width: 33%
-  -moz-column-width: 33%
-  column-width: 33%
+  @media ( max-width: $breakpoint-xs-max )
+    -webkit-column-count: 1
+    -moz-column-count: 1
+    column-count: 1
+    -webkit-column-width: 100%
+    -moz-column-width: 100%
+    column-width: 100%
+  @media ( min-width: $breakpoint-sm-min )
+    -webkit-column-count: 2
+    -moz-column-count: 2
+    column-count: 2
+    -webkit-column-width: 50%
+    -moz-column-width: 50%
+    column-width: 50%
+  @media ( min-width: $breakpoint-md-min )
+    -webkit-column-count: 3
+    -moz-column-count: 3
+    column-count: 3
+    -webkit-column-width: 33%
+    -moz-column-width: 33%
+    column-width: 33%
   img
     padding: 5px
 .pics
