--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -37,3 +37,10 @@ body
 
 .q-carousel
   background: $black
+  @media print
+    background: white
+
+.body--dark
+  @media print
+    background: white !important
+    color: $black !important
